class TestKey {
  //Login key
  static const String emailField = 'emailField';
  static const String passwordField = 'passwordField';
  static const String loginButton = 'loginButton';

  //task
  static const String titleField = 'titleField';
  static const String descriptionField = 'descriptionField';
  static const String assignedToField = 'assignedToField';
  static const String statusField = 'statusField';
  static const String deadlineField = 'deadlineField';
  static const String createButton = 'createButton';
  static const String updateButton = 'updateButton';
  static const String confirmDeleteButton = 'confirmDeleteButton';

  //Member
  static const String memberNameField = 'memberNameField';
  static const String memberEmailField = 'memberEmailField';
  static const String memberPhoneField = 'memberPhoneField';
  static const String memberPasswordField = 'memberPasswordField';
  static const String createMemberButton = 'createMemberButton';
  static const String updateMemberButton = 'updateMemberButton';
  static const String addMemberButton = 'addMemberButton';
  static const String memberCard = '324049f5-e576-43ff-a92d-1110e4a8449c';
}
