...
    password: 'password123',
  ),
  UserModel(
    id: '2',
    name: 'Jane Smith',
    email: 'jane.smith@example.com',
    phoneNumber: '0987654321',
    avatarUrl: 'https://example.com/avatar2.jpg',
    password: 'password456',
  ),
  UserModel(
    id: '3',
    name: 'Bob Johnson',
...
